Ensure caption is set when a widget is active

BUG: 499223
(cherry picked from commit d50a1830395433885e6904838f40030c3f3f1e41)